# mail-organizer

./: .env.example  .gitignore  LICENSE  README.md  dev.sh  docker-compose.yml
backend/: Dockerfile  Makefile  README.md  classify_with_ollama.sh  cli.py  fetch_mail.py  pyproject.toml  register_watch.py  requirements.txt
backend/src/: __init__.py  api.py  classification_labels.py  context_builder.py  embedding_service.py  llm_processor.py  rag_engine.py  sync_manager.py
backend/src/clients/: gmail.py  gmail_client.py
backend/src/jobs/: classify_all.py  classify_messages.py  embed_all_emails.py  pull_all_inbox.py  pull_messages.py  register_watch.py
backend/src/models/: classification_record.py  message.py
backend/src/organize_mail/: __init__.py  api.py  gmail_helper.py  llm_processor.py  pubsub_subscriber.py
backend/src/services/: __init__.py  embedding_service.py  llm_processor.py  llm_prompts.py  prompt_templates.py  rag_engine.py
backend/src/storage/: __init__.py  memory_storage.py  postgres_storage.py  sqlite_storage.py  storage.py  storage_interface.py
backend/src/utils/: css_sanitizer.py  email_processor.py  html_sanitizer.py
backend/tests/: test_api_messages.py  test_classification_record.py  test_jobs.py  test_llm_processor.py  test_postgres_storage.py  test_storage.py
backend/tests/integration/: test_chat_history_flow.py
backend/tests/other/: test_chat_history_manual.py
backend/tests/unit/: test_rag_query_classification.py
docs/: .env.example  STORAGE_SCHEMA.md  architecture.md
frontend/: Dockerfile  README.md  package-lock.json  (+2 more)
(+26 files in other folders)
